<?xml version="1.0"?>
<package format="2">
  <name>kst_cpp_ros</name>
  <version>0.0.0</version>
  <description>The kst_cpp_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yl@todo.todo">yl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>